# notebook_rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
data/: test.md  test_config.toml
src/: argparse.rs  config.rs  entry.rs  lib.rs  main.rs  notebook.rs
tests/: cli_tests.rs
tests/cmd/: test_help.stdout  test_help.trycmd  test_list_all.stdout  test_list_v1.stdout  test_list_v2.stdout  test_read_first.stdout  test_read_last.stdout  test_search_regex.stdout
