[package]
name = "notebook_rs"
version = "0.5.0"
authors = ["K Malachi Mulligan <kevinmalachimulligan@protonmail.com>"]
edition = "2021"
repository = "https://github.com/dbxnr/notebook_rs"
homepage = "https://github.com/dbxnr/notebook_rs"
description = "CLI utility for plaintext notetaking."
license = "MIT"
keywords = ["notebook", "journal"]
categories = ["command-line-utilities"]
readme = "README.md"
exclude = ["data/*"]

[dependencies]
ansi_term = "~0.12"
anyhow = "~1.0"
directories = "~5.0"
chrono = "~0.4"
clap = "~4.4"
confy = "~0.5"
humantime = "~2.1"
regex = "~1.10"
serde = { version = "~1.0", features = ["derive"] }
vader_sentiment = "~0.1"

[[bin]]
name = "nb"
path = "src/main.rs"

[dev-dependencies]
snapbox = "~0.4"
